added authentcation using devise

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,4 +2,4 @@
 
 <%= render partial: @posts %>
 
-<%= link_to 'New Post', new_post_path %>
+<div class="btn btn-primary"><%= link_to 'New Post', new_post_path %></div>
