--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
 <%= link_to 'Back', posts_path %>
 
 <h2>Comments</h2>
-<div id="comments">
+<div id="comments" class="jumbotron">
   <%= render partial: @post.comments %>
 </div>
 
